--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
-PORT = 5000
-CLIENT_URL = http://localhost:3000
-JWT_SECRET = saaadkwhashduswwiasdsdjhsbn
+DB_NAME=libraryds
+DB_USER=root
+DB_PASSWORD=
+DB_HOST=localhost
+PORT=3000
+CLIENT_URL=http://localhost:3000
+JWT_SECRET=112938434
+ADMIN_SECRET_CODE=caicodenaychiuchet
+JWT_EXPIRATION=1h
