--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ CLIENT_URL=http://localhost:3000
 JWT_SECRET=112938434
 ADMIN_SECRET_CODE=caicodenaychiuchet
 JWT_EXPIRATION=1h
+SSL_KEY_PATH=./ssl/private.key
+SSL_CERT_PATH=./ssl/certificate.crt
+HTTPS_PORT=5000
+HTTP_PORT=80
