--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "dev": "nodemon --exec babel-node src/server.js",
     "build": "babel src -d dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate-cert": "node scripts/generate-cert.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
+    "node-forge": "^1.3.1",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "sequelize": "^6.35.1"
