--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "library-server",
   "version": "1.0.0",
   "description": "Library management system API server",
-  "main": "index.js",
+  "main": "./src/server.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node src/server.js",
     "dev": "nodemon --exec babel-node src/server.js",
     "build": "babel src -d dist",
     "test": "echo \"Error: no test specified\" && exit 1",
